@@ -213,7 +213,7 @@ public class CommonServiceImpl implements CommonService {
 						logger.error(e.getMessage());
 					}
 					return null;
-				}).distinct().toList();
+				}).distinct().collect(Collectors.toList());
 				fldId.setAccessible(true);
 				
 				List<FlatDetailsEntity> flatList = flatDetailsRepository.getFlatList(userContext.getApartmentId(), flatIds);		
@@ -264,7 +264,7 @@ public class CommonServiceImpl implements CommonService {
 						logger.error(e.getMessage());
 					}
 					return null;
-				}).distinct().toList();
+				}).distinct().collect(Collectors.toList());
 				fldSessionId.setAccessible(true);
 				
 				List<SessionDetailsEntity> sessionList = sessionDetailsRepository.getSessionDetailsList(userContext.getApartmentId(), sessionIds);		
@@ -316,7 +316,7 @@ public class CommonServiceImpl implements CommonService {
 						logger.error(e.getMessage());
 					}
 					return null;
-				}).distinct().toList();
+				}).distinct().collect(Collectors.toList());
 				fldId.setAccessible(true);
 				
 				List<EventsEntity> eventList = eventsRepository.getListByIds(userContext.getApartmentId(), ids);
@@ -354,21 +354,6 @@ public class CommonServiceImpl implements CommonService {
 				Class cls = list.get(0).getClass();
 				Field paymentById = cls.getDeclaredField("paymentBy");
 				paymentById.setAccessible(true);
-				List<Long> paymentByIds = list.stream().map( m -> {
-					try {
-						return (Long)paymentById.get(m);
-					} catch (IllegalArgumentException e) {
-						// TODO Auto-generated catch block
-						e.printStackTrace();
-						logger.error(e.getMessage());
-					} catch (IllegalAccessException e) {
-						// TODO Auto-generated catch block
-						e.printStackTrace();
-						logger.error(e.getMessage());
-					}
-					return null;
-				}).distinct().toList();
-				paymentById.setAccessible(true);
 				
 				List<UserDetailsEntity> userDetailsList = userDetailsRepository.getAll(userContext.getApartmentId());		
 				Map<Long, UserDetailsEntity> userListMap = userDetailsList.stream().collect(Collectors.toMap( x -> x.getId(), x -> x));
@@ -379,6 +364,44 @@ public class CommonServiceImpl implements CommonService {
 					if(f != null) {
 						try {
 							paymentByName.set(f, Utils.getUserFullName(userListMap.get((Long)paymentById.get(f))));
+						} catch (IllegalArgumentException e) {
+							// TODO Auto-generated catch block
+							e.printStackTrace();
+							logger.error(e.getMessage());
+						} catch (IllegalAccessException e) {
+							// TODO Auto-generated catch block
+							e.printStackTrace();
+							logger.error(e.getMessage());
+						}
+					}
+				});
+			}
+		} catch (Exception e) {
+			e.printStackTrace();
+			throw new RuntimeException(e.getMessage());
+		}		
+	}
+	
+	@Override
+	public <T> void addOwnersNameAndContactNoToDTO(List<T> list) {
+		UserContext userContext = Utils.getUserContext();
+		try {
+			if(list != null && !list.isEmpty() && list.get(0) != null) {
+				Class cls = list.get(0).getClass();
+				Field flatIdFld = cls.getDeclaredField("flatId");
+				flatIdFld.setAccessible(true);
+				
+				Field ownersNameFld = cls.getDeclaredField("ownersName");
+				Field contactNoFld = cls.getDeclaredField("contactNo");
+				list.forEach( f -> {
+					if(f != null) {
+						try {
+							List<Object[]> linkList = linkFlatDetailsAndUserDetailsRepository.getLinkObjectDetails(userContext.getApartmentId(), Long.parseLong(String.valueOf(flatIdFld.get(f))));
+							String firstName = linkList.get(0)[3] != null ? linkList.get(0)[3]+"" : "";
+							String lastName = linkList.get(0)[4] != null ? linkList.get(0)[4]+"" : "";
+							String userFullName = firstName + " "+ lastName;
+							ownersNameFld.set(f, userFullName);
+							contactNoFld.set(f, linkList.get(0)[5] != null ? linkList.get(0)[5]+"" : "");
 						} catch (IllegalArgumentException e) {
 							// TODO Auto-generated catch block
 							e.printStackTrace();
